# gta-sa-cli-launcher

./: .gitignore  CMakeLists.txt  README.md  gta-sa-launcher.code-workspace
.github/workflows/: c-cpp.yml
src/: main.cpp
